# gilgamesh

./: .dockerignore  .editorconfig  .env.example  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  deny.toml  docker-compose.yml  justfile  package.json
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: cd.yml  ci.yml  ci_terraform.yml  deploy-infra.yml  release.yml  validate.yml  version.yml
integration/: integration.test.ts
ops/: Dockerfile-dev  docker-compose.gilgamesh.yml  docker-compose.storage.yml  docker-compose.test.yml
src/: config.rs  error.rs  lib.rs  main.rs  state.rs
src/auth/: jwt.rs  mod.rs
src/handlers/: get_messages.rs  get_registration.rs  messages.rs  mod.rs  register.rs  save_message.rs
src/metrics/: mod.rs
src/relay/: mod.rs  signature.rs
src/store/: messages.rs  mod.rs  registrations.rs
src/store/mongo/: mod.rs
src/stores/: messages.rs  mod.rs
src/tags/: mod.rs
terraform/: .tflint.hcl  README.md  backend.tf  context.tf  main.tf  outputs.tf  terraform.tf  variables.tf
terraform/docdb/: README.md  context.tf  main.tf  outputs.tf  terraform.tf  variables.tf
terraform/ecs/: README.md  main.tf  terraform.tf  variables.tf
terraform/monitoring/: README.md  context.tf  dashboard.jsonnet  dashboard.tf  data_sources.tf  layout.libsonnet  main.tf  outputs.tf  prometheus.tf  terraform.tf  test.dashboard.jsonnet  variables.tf
terraform/monitoring/grafonnet/: field_config.libsonnet  grafana.libsonnet  link.libsonnet  panel.libsonnet  prometheus.libsonnet  stat_panel.libsonnet  timeseries_panel.libsonnet
terraform/monitoring/panels/: defaults.libsonnet  get_queries.libsonnet  panels.libsonnet  received_items.libsonnet  registrations.libsonnet  served_items.libsonnet  stored_items.libsonnet
terraform/monitoring/panels/app/: cpu.libsonnet  memory.libsonnet
terraform/monitoring/panels/archive/: stored_items.libsonnet
terraform/monitoring/panels/history/: get_queries.libsonnet  received_items.libsonnet  registrations.libsonnet  served_items.libsonnet
tests/: integration.rs
tests/context/: mod.rs  server.rs  store.rs
tests/messages/: mod.rs
tests/metrics/: mod.rs
tests/registration/: mod.rs
tests/storage/: messages.rs  mod.rs  registrations.rs
tests/storage/mocks/: messages.rs  mod.rs  registrations.rs
tests/store/: mod.rs
