[package]
name = "gilgamesh"
version = "0.6.3"
edition = "2021"
authors = [
    "Derek <derek@walletconnect.com>",
    "Xav <xav@walletconnect.com>"
]
build = "build.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.6", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.3", features = ["trace"] }
hyper = "0.14"

# Database
wither = { git = "https://github.com/WalletConnect/wither.git", rev = "6a70e74", features = ["bson-chrono-0_4"] }
wither_derive = { git = "https://github.com/WalletConnect/wither.git", rev = "6a70e74" }

# Seralisation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Env Vars
dotenv = "0.15"
envy = "0.4"

# Telemetry
opentelemetry = { version = "0.17", features = ["trace", "metrics", "rt-tokio"] }
opentelemetry-otlp = { version = "0.10", features = ["metrics", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-opentelemetry = "0.17"

# Misc
build-info = "0.0"
log = "0.4"
thiserror = "1.0"
async-trait = "0.1"
anyhow = "1"
futures = "0.3.25"

[dev-dependencies]
test-context = "0.1"
reqwest = "0.11"

[build-dependencies]
build-info-build = "0.0"
