[package]
name = "gilgamesh"
version = "0.8.2"
edition = "2021"
authors = [
    "Derek <derek@walletconnect.com>",
    "Xav <xav@walletconnect.com>"
]
license = "Apache-2.0"
build = "build.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.6", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.4.0", features = ["trace", "cors"] }
hyper = "0.14"

# WalletConnect
relay_rpc = { git = "https://github.com/WalletConnect/WalletConnectRust.git", rev = "5f4dd3cbf4a67e40c47503706f8e0ae8d8bdd435" }

# Database
wither = { git = "https://github.com/WalletConnect/wither.git", rev = "6a70e74", features = ["bson-chrono-0_4"] }
wither_derive = { git = "https://github.com/WalletConnect/wither.git", rev = "6a70e74" }

# Seralisation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Env Vars
dotenv = "0.15"
envy = "0.4"

# Metrics & Traces
prometheus-core = { package = "prometheus", version = "0.13" }
opentelemetry = { version = "0.18", features = ["metrics", "rt-tokio"] }
opentelemetry-prometheus = "0.11"
opentelemetry-otlp = "0.11"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "parking_lot"] }
tracing-appender = "0.2"
tracing-opentelemetry = "0.18"
atty = "0.2"

# Signature validation
ed25519-dalek = "1.0"

# JWT
jsonwebtoken = "8.1"

# Misc
anyhow = "1"
async-trait = "0.1"
build-info = "0.0"
chrono = { version = "0.4", features = ["serde"] }
data-encoding = "2.3"
futures = "0.3.25"
hex = "0.4"
log = "0.4"
moka = { version = "0.10", features = ["future"] }
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"

[features]
storage-tests = []
ci-tests = []

[dev-dependencies]
test-context = "0.1"
function_name = "0.3.0"

[build-dependencies]
build-info-build = "0.0"
